# contemplative-agent-rules

./: .gitignore  CLAUDE.md  LICENSE  README.ja.md  README.md  SOUL.md  install.sh  llms-full.txt  llms.txt
.claude/skills/: llm-social-agent-anti-pattern.md
adapters/: README.md
adapters/copilot/: copilot-instructions.md
adapters/cursor/: contemplative-alignment.mdc
adapters/generic/: system-prompt.md
benchmarks/prisoners-dilemma/: README.md  pyproject.toml  results-paper-protocol.json  results_gpt4o_mini.json  results_qwen35_9b.json
benchmarks/prisoners-dilemma/src/ipd/: __init__.py  benchmark.py  cli.py  game.py  llm_player.py  strategies.py
benchmarks/prisoners-dilemma/src/ipd/prompts/: custom.md  paper-faithful.md
benchmarks/prisoners-dilemma/tests/: test_benchmark.py  test_game.py  test_llm_player.py  test_strategies.py
docs/: MEMORY-REFACTOR-PLAN.md  benchmark-results-2026-03-05.ja.md  benchmark-results-2026-03-05.md  benchmark-results-2026-03-12.ja.md  benchmark-results-2026-03-12.md  benchmark-results-paper-protocol.ja.md  benchmark-results-paper-protocol.md  implementation-plan.md  skill-comply-contemplative-axioms-2026-04-26.md
docs/CODEMAPS/: architecture.md  benchmark.md
docs/adr/: 0001-moltbook-agent-separate-repo.ja.md  0001-moltbook-agent-separate-repo.md  0002-verbatim-appendix-c-across-formats.ja.md  0002-verbatim-appendix-c-across-formats.md  0003-three-prompt-variants-for-ipd.ja.md  (+6 more)
moltbook-agent/: .env.example  .gitignore  Modelfile.contemplative  README.md  pyproject.toml  run_overnight.sh
prompts/: full.md  operator-keyed.md
(+32 files in other folders)
