[project]
name = "contemplative-ipd-benchmark"
version = "0.1.0"
description = "Iterated Prisoner's Dilemma benchmark for Contemplative AI alignment"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = ["requests>=2.28.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov>=4.0"]
paper = ["scipy>=1.10.0", "statsmodels>=0.14.0", "numpy>=1.24.0"]

[project.scripts]
ipd-benchmark = "ipd.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ipd"]

[tool.pytest.ini_options]
testpaths = ["tests"]
