[project]
name = "contemplative-ipd"
version = "0.2.0"
description = "Benchmark your contemplative prompts on the Iterated Prisoner's Dilemma. Based on Laukkonen et al. (2025)."
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = ["requests>=2.28.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov>=4.0"]
paper = ["scipy>=1.10.0", "statsmodels>=0.14.0", "numpy>=1.24.0"]

[project.scripts]
ipd-benchmark = "ipd.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ipd"]

[tool.hatch.build.targets.wheel.force-include]
"src/ipd/prompts" = "ipd/prompts"

[tool.pytest.ini_options]
testpaths = ["tests"]
